ive got more mail

--- a/remote.html
+++ b/remote.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HackOS Remote Access Tool</title>
-    <link rel="stylesheet" href="loginpage.css">
   </head>
   <body>
-    <div class="loginpage">
-      <h1>HackOS Remote Tool</a></h1>
-    </div>
-  <p class="footer">Copyright (C) Simone Imeyolek</p>
+  <div id="app"></div>
+  <div id="stats"></div>
+  <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
