--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="loginpage">
       <h1>HackOS Remote Tool</a></h1>
     </div>
-  <p class="footer">Copyright (C) Simone Imeyolek</p>
+    <p class="footer">Copyright (<a href="/hackos/remote.html" >C</a>) Simone Imeyolek</p>
   </body>
 </html>
