--- a/remote.html
+++ b/remote.html
@@ -1,1 +1,24 @@
-export default "/hackos/assets/remote-BgAe20TK.html"
+<!doctype html>
+<html lang="en">
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Press Start 2P']
+        },
+        active:e=>{}
+      });
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HackOS Remote Access Tool</title>
+    <script type="module" crossorigin src="/hackos/assets/remote-GzheD0Jc.js"></script>
+    <link rel="stylesheet" crossorigin href="/hackos/assets/remote-CkPxiwfl.css">
+  </head>
+  <body>
+  <div id="app"></div>
+  <div id="stats"></div>
+  </body>
+</html>
