jolene, jolene, jolene joleeeeeen

--- a/questions.html
+++ b/questions.html
@@ -30,7 +30,7 @@
           <input id="marriage">
           <label><br>What is your faviourite type of cheese?</label>
           <input id="cheese">
-          <label><br>What is your faviourite type of cheese?</label>
+          <label><br>What is your child's first name?</label>
           <input id="child">
           <input type="submit" name="submit" style="visibility: hidden; width: 0px">
           </div>
