--- a/remote.html
+++ b/remote.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script>
+      document.addEventListener("contextmenu", (event) => {
+        event.preventDefault();
+      });
+      document.addEventListener("keydown", (event) => {
+        if (event.key == "F12") {
+          event.preventDefault();
+        }
+      });
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
       WebFont.load({
