--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </form>
       </div>
     </div>
-    <p class="footer">HackOS Remote Tool version 7.9 Copyright (C) Simone Imeyolek</p>
+    <p class="footer">HackOS Remote Tool version 7.9 Copyright (C) 1993 Simone Imeyolek</p>
     <script>
       document
         .getElementById("form")
