--- a/remote.html
+++ b/remote.html
@@ -24,8 +24,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HackOS Remote Access Tool</title>
-    <script type="module" crossorigin src="/hackos/assets/remote-DskmjuiP.js"></script>
-    <link rel="stylesheet" crossorigin href="/hackos/assets/remote-CkPxiwfl.css">
+    <script type="module" crossorigin src="/assets/remote-gLIXRYsp.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/remote-CkPxiwfl.css">
   </head>
   <body>
   <div id="app"></div>
