made back button work when melon thing occurs

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               document.getElementById("username").style.backgroundColor = "lightgray";
               document.getElementById("username").focus();
             }, 200);
-            setTimeout(() => {window.location.replace("remote.html");}, 500);
+            setTimeout(() => {window.location.href = "remote.html";}, 500);
             
             return
           }
