--- a/questions.html
+++ b/questions.html
@@ -119,7 +119,7 @@
             "31st october 2014",
           ]);
         if (numCorrect == 10) {
-          setTimeout(() => window.location.replace("didit.html"), 300);
+          setTimeout(() => window.location.href = "didit.html", 300);
         }
       }
     </script>
