--- a/remote.html
+++ b/remote.html
@@ -24,7 +24,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HackOS Remote Access Tool</title>
-    <script type="module" crossorigin src="/assets/remote-gLIXRYsp.js"></script>
+    <script type="module" crossorigin src="/assets/remote-DeFk9KF3.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/remote-CkPxiwfl.css">
   </head>
   <body>
